lit-test/test/codegen/error_illegal_builtin.py
# RUN: %python -m artiq.compiler.testbench.signature +diag %s >%t
# RUN: OutputCheck %s --file-to-check=%t

# CHECK-L: ${LINE:+1}: error: builtin function 'watchdog' cannot be used in this context
watchdog(1.0)
